Attempt to fix Prism rendering issue on mobile.

--- a/styles/prism.css
+++ b/styles/prism.css
@@ -41,13 +41,6 @@ pre[class*='language-'] {
     background: #2d2d2d;
 }
 
-/* Inline code */
-:not(pre) > code[class*='language-'] {
-    padding: 0.1em;
-    border-radius: 0.3em;
-    /* white-space: normal; */
-}
-
 .token.comment,
 .token.block-comment,
 .token.prolog,
